--- a/inflearnSpringRESTAPI/build.gradle
+++ b/inflearnSpringRESTAPI/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+	implementation 'org.modelmapper:modelmapper:2.3.1'
 }
 
 tasks.named('test') {
