--- a/study-spring/build.gradle
+++ b/study-spring/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.6.5'
 }
 
 tasks.named('test') {
