--- a/study-spring-security/build.gradle
+++ b/study-spring-security/build.gradle
@@ -29,6 +29,9 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	annotationProcessor 'org.projectlombok:lombok'
 	compileOnly 'org.projectlombok:lombok'
+	implementation 'org.modelmapper:modelmapper:2.3.1'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
