--- a/study-spring/build.gradle
+++ b/study-spring/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 	implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.6.5'
+	implementation 'org.modelmapper:modelmapper:2.3.1'
 }
 
 tasks.named('test') {
