[feat]: app properties

--- a/spring-security-oauth2/src/main/resources/application.properties
+++ b/spring-security-oauth2/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+my-app.admin-username=admin@email.com
+my-app.admin-password={noop}admin
+my-app.user1-username=audwls2lee@naver.com
+my-app.user1-password={noop}qwer1234
+my-app.client-id=myApp
+my-app.client-secret=pass
