--- a/spring-security-oauth2/build.gradle
+++ b/spring-security-oauth2/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.wwan13'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = '11'
 
 configurations {
 	compileOnly {
@@ -25,6 +25,8 @@ dependencies {
 	implementation 'org.springframework.security.oauth:spring-security-oauth2:2.3.5.RELEASE'
 	implementation group: 'org.springframework.security.oauth.boot', name: 'spring-security-oauth2-autoconfigure', version: '2.1.0.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-configuration-processor:2.6.14'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
