[refactor]: seperate test user strings

--- a/spring-security-oauth2/src/main/resources/application.properties
+++ b/spring-security-oauth2/src/main/resources/application.properties
@@ -2,5 +2,7 @@ my-app.admin-username=admin@email.com
 my-app.admin-password=admin
 my-app.user1-username=audwls2lee@naver.com
 my-app.user1-password=qwer1234
+my_app.test-user1-username=testUser1@naver.com
+my_app.test-user1-password=testUserPassword
 my-app.client-id=myApp
 my-app.client-secret=pass
